[gd_scene load_steps=8 format=3 uid="uid://jihub5mpgfwm"]

[ext_resource type="Script" path="res://inventory/craftingMenu/craftingSubsection/craftingSubsection.gd" id="1_xkm27"]
[ext_resource type="PackedScene" uid="uid://birg5dom2mu1h" path="res://inventory/craftingMenu/craftingSubsection/CraftingDisplayItem.tscn" id="2_di88c"]
[ext_resource type="PackedScene" uid="uid://cmdvcwhhlbwvv" path="res://inventory/craftingMenu/craftingSubsection/resource_name.tscn" id="3_ct6f8"]
[ext_resource type="Texture2D" uid="uid://cl44wos2rqmek" path="res://inventory/craftingMenu/SmallLabelButtonNormal.png" id="4_okjvr"]
[ext_resource type="Texture2D" uid="uid://dv2vneirvx0hc" path="res://inventory/craftingMenu/SmallLabelButtonPressed.png" id="5_1yj7t"]
[ext_resource type="Texture2D" uid="uid://do6mq6hhldwxt" path="res://inventory/craftingMenu/SmallLabelButtonHover.png" id="6_e1mqu"]
[ext_resource type="FontFile" uid="uid://c32arsggg4kna" path="res://startscreen/Nihonium113.ttf" id="7_y2csh"]

[node name="subsectionContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_xkm27")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 18.0
offset_right = -18.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 18
theme_override_constants/v_separation = 18
columns = 3

[node name="displaySection" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="container" type="VBoxContainer" parent="HBoxContainer/displaySection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 49.0
offset_right = -48.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TextureRect" parent="HBoxContainer/displaySection/container" instance=ExtResource("2_di88c")]
layout_mode = 2

[node name="resourceName" parent="HBoxContainer/displaySection/container" instance=ExtResource("3_ct6f8")]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/displaySection/container"]
layout_mode = 2
size_flags_horizontal = 4
columns = 6

[node name="craftButton" type="TextureButton" parent="HBoxContainer/displaySection/container"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_okjvr")
texture_pressed = ExtResource("5_1yj7t")
texture_hover = ExtResource("6_e1mqu")

[node name="Label" type="Label" parent="HBoxContainer/displaySection/container/craftButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -7.0
offset_right = 15.5
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_y2csh")
theme_override_font_sizes/font_size = 16
text = "Craft"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/displaySection/container/craftButton" to="." method="_on_craft_button_pressed"]
